<resources>

    <string name="app_name">Popular_Movies_Stage2</string>
    <string name="action_settings">MENU</string>
    <string name="placeholder">placeholder</string>

    //Details Layout
    <string name="imageDetails">image of the movie</string>
    <string name="originalTitle">Original Title: </string>
    <string name="synopsis">Synopsis: </string>
    <string name="userRating">User Rating: </string>
    <string name="releaseDate">Release Date: </string>

    //Stage 2 Layout
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="favouriteSave">Save as Favourite</string>
    <string name="favouriteSaveClicked">Saved as Favourite</string>
    <string name="sortFavourite">Favourite</string>
    <string name="Favourite">This movie is one of your Favourite</string>
    <string name="UnFavourite">UnFavourite</string>


    //Reviews and Trailers
    <string name="watchTrailer">Click the link to Watch: </string>
    <string name="review">Review: </string>
    <string name="authur">Authur: </string>


    //Settings Values
    <string name="sortOption">Sort by:</string>
    <string name="sortmostPopular">Most Popular</string>
    <string name="sorthigestRated">Higest Rated </string>

    //Passing an object as parcelable
    <string name="intent_movie">intentmovie</string>

    //Error Messages
    <string name="NO_INTERNET_CONNECTION">No internet connection</string>

</resources>
