<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/movieImage"
            android:layout_width="@dimen/detailsimagebox_width"
            android:layout_height="@dimen/detailsimagebox_height"
            android:padding="@dimen/base_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/detailsTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/originalTitle" />

                <TextView
                    android:id="@+id/originalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/detailsTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userRating" />

                <TextView
                    android:id="@+id/userRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/detailsTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/releaseDate" />

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/detailsTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synopsis" />

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/detailsTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailerRecylerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/base_margin">
            </android.support.v7.widget.RecyclerView>

            <TextView
                style="@style/detailsTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewRecylerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>